--- a/mentorados/templates/reunioes.html
+++ b/mentorados/templates/reunioes.html
@@ -55,20 +55,29 @@
 
 
  <ul role="list" class="divide-y divide-gray-800">
-
+{% for reuniao in reunioes %}
  <li class="flex justify-between gap-x-6 py-5">
  <div class="flex min-w-0 gap-x-4">
- <img class="size-12 flex-none rounded-full bg-gray-800" src="#" alt="">
+    {% if reuniao.mentorado.foto %}
+    <img class="size-12 flex-none rounded-full bg-gray-800" src="{{ reuniao.mentorado.foto.url }}" alt="">
+    {% else %}
+    <div class="size-12 flex-none rounded-full bg-gray-800 text-white text-center flex items-center justify-center">
+      {{ reuniao.mentorado.nome|slice:":1"|upper }}
+    </div>
+  {% endif %}
  <div class="min-w-0 flex-auto">
- <p class="text-sm/6 font-semibold text-white">Nome</p>
- <p class="mt-1 truncate text-xs/5 text-gray-400">Descricao</p>
+ <p class="text-sm/6 font-semibold text-white">{{reuniao.mentorado.nome}}</p>
+ <p class="mt-1 truncate text-xs/5 text-gray-400">{{reuniao.descricao}}</p>
  </div>
  </div>
  <div class="hidden shrink-0 sm:flex sm:flex-col sm:items-end">
- <p class="text-sm/6 text-white">Data</p>
+ <p class="text-sm/6 text-white">{{reuniao.data.data_incial}}</p>
  <p class="mt-1 text-xs/5 text-gray-400"></p>
  </div>
  </li>
+ 
+ {% endfor %}
+
 
  </ul>
 
