--- a/mentorados/templates/mentorados.html
+++ b/mentorados/templates/mentorados.html
@@ -19,10 +19,9 @@
       </button>
     </div>
     <div class="hidden lg:flex lg:gap-x-12">
-      <a href="#" class="text-sm font-semibold text-gray-100">Mentorados</a>
-      <a href="#" class="text-sm font-semibold text-gray-100">Tarefas</a>
-      <a href="#" class="text-sm font-semibold text-gray-100">Progressos</a>
-      <a href="#" class="text-sm font-semibold text-gray-100">Navigators</a>
+      <a href="{% url 'mentorados' %}" class="text-sm font-semibold text-gray-100">Mentorados</a>
+      <a href="{% url 'reunioes' %}" class="text-sm font-semibold text-gray-100">Reuniões</a>
+
     </div>
     <div class="hidden lg:flex lg:flex-1 lg:justify-end">
       <!-- Botões ou links adicionais -->
