--- a/mentorados/templates/tarefa.html
+++ b/mentorados/templates/tarefa.html
@@ -5,12 +5,15 @@
 <main class="text-white bg-[#0b1526] min-h-screen">
   <header class="bg-slate-900">
     <nav class="flex items-center justify-between p-4 lg:px-8" aria-label="Global">
+
       <div class="flex lg:flex-1">
         <a href="#" class="-m-1.5 p-1.5">
           <span class="sr-only">Your Company</span>
           <img class="h-8 w-auto" src="{% static 'logo.png' %}" alt="">
         </a>
       </div>
+    
+
       <div class="flex lg:hidden">
         <button type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-300">
           <span class="sr-only">Open main menu</span>
@@ -19,12 +22,15 @@
           </svg>
         </button>
       </div>
-      <div class="hidden lg:flex lg:gap-x-12">
-        <a href="#" class="text-sm/6 font-semibold text-gray-100">Mentorados</a>
-        <a href="#" class="text-sm/6 font-semibold text-gray-100">Tarefas</a>
-        <a href="#" class="text-sm/6 font-semibold text-gray-100">Progressos</a>
-        <a href="#" class="text-sm/6 font-semibold text-gray-100">Navigators</a>
+    
+  
+      <div class="hidden lg:flex lg:gap-x-12 lg:justify-center lg:flex-1">
+        <a href="{% url 'mentorados' %}" class="text-sm font-semibold text-gray-100">Mentorados</a>
+        <a href="{% url 'reunioes' %}" class="text-sm font-semibold text-gray-100">Reuniões</a>
       </div>
+    
+    
+      <div class="hidden lg:flex lg:flex-1 lg:justify-end"></div>
     </nav>
   </header>
 
