--- a/mentorados/templates/tarefa_mentorado.html
+++ b/mentorados/templates/tarefa_mentorado.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
-{% block 'body' %} <header class="bg-slate-900">
+{% block 'body' %} 
+<script src="https://unpkg.com/htmx.org@2.0.4"></script>
+<header class="bg-slate-900">
  <nav class="flex items-center justify-between p-4 lg:px-8" aria-label="Global">
  <div class="flex lg:flex-1">
  <a href="#" class="-m-1.5 p-1.5">
@@ -17,10 +19,8 @@
  </button>
  </div>
  <div class="hidden lg:flex lg:gap-x-12">
- <a href="#" class="text-sm/6 font-semibold text-gray-100">Mentorados</a>
- <a href="#" class="text-sm/6 font-semibold text-gray-100">Tarefas</a>
- <a href="#" class="text-sm/6 font-semibold text-gray-100">Progressos</a>
- <a href="#" class="text-sm/6 font-semibold text-gray-100">Navigators</a>
+  <a href="{% url 'mentorados' %}" class="text-sm font-semibold text-gray-100">Mentorados</a>
+  <a href="{% url 'reunioes' %}" class="text-sm font-semibold text-gray-100">Reuniões</a>
  </div>
  <div class="hidden lg:flex lg:flex-1 lg:justify-end">
 
@@ -108,7 +108,7 @@
    
     {% for tarefa in tarefas %}
     <div class="flex items-center mb-4">
-    <input id="default-checkbox" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+    <input id="default-checkbox" hx-post="/mentorados/tarefa_alterar/{{tarefa.id}}" hx-trigger="click" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"  {% if tarefa.realizada %}checked{% endif %}>
     <label for="default-checkbox" class="ms-2 text-sm font-medium text-white">{{tarefa.tarefa}}</label>
 
     </div>
